Add: Minimm required backend implementation for first release
